[package]
name = "jdjg-image-manipulation"
version = "0.1.0"
edition = "2021"
description = "Image manipulation library for the JDJG organization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.25"
image = "0.25.1"
imageproc = "0.24.0"
pyo3 = "0.21.2"
textwrap = "0.16.1"
